0.1.4 version - added multi-path key to preview, AND/OR bug fixes and array block prints